--- a/src/main/resources/assets/adven_one/lang/en_us.lang
+++ b/src/main/resources/assets/adven_one/lang/en_us.lang
@@ -41,3 +41,7 @@ adven_one.armor3=%s Shoes
 adven_one.planks=%s Planks
 adven_one.dirt=%s Dirt
 adven_one.stone=%s Rock
+
+#
+attribute.name.adven_one.attr.def_tier=Defense Tier
+attribute.name.adven_one.attr.atk_tier=Attack Tier
