add log and some texture

--- a/src/main/resources/assets/adven_one/lang/en_us.lang
+++ b/src/main/resources/assets/adven_one/lang/en_us.lang
@@ -38,6 +38,7 @@ adven_one.armor1=%s T-shirt
 adven_one.armor2=%s Pants
 adven_one.armor3=%s Shoes
 
+adven_one.log=%s Log
 adven_one.planks=%s Planks
 adven_one.dirt=%s Dirt
 adven_one.stone=%s Rock
