--- a/src/main/resources/assets/adven_one/lang/zh_cn.lang
+++ b/src/main/resources/assets/adven_one/lang/zh_cn.lang
@@ -1,67 +1,61 @@
-# PARSE_ESCAPES
-itemGroup.ideallandMiscTab=理境大厅
+#PARSE_ESCAPES
+#tabs
+itemGroup.advenMiscTab=Adventure One Misc
 
-generator.TYPE_ONE=Type One;
-generator.TYPE_TWO=Type Two;
+#config
+configgui.idealland.category.Menu0.GeneralConf=General Config
+idealland.conf.general.welcome=Welcome Message Key
 
-# config
-configgui.idealland.category.Menu0.GeneralConf=综合选项
-idealland.conf.general.welcome=欢迎词
+#Entities
+entity.moroon_tainter.name=Moroon Pathfinder
 
-# Enchantments
-enchantment.idealland.test_enchantment=测试期
+#Blocks
+tile.idealland_light_basic.name=Idealland Lamp
 
-idealland.moroon_incoming_herald=[IDL][注意] 摩隆密切关注着你的战斗。
-idealland.msg.notice_meter_report=[IDL]摩隆注意度： %d, 入侵准备: %d/%d, 测量误差:%d
+#Items
+item.p2w_goblet.name=P.2.W. Chalice
+item.p2w_goblet.desc=Pay gold to increa
 
-# Potions
-idealland.potion.deadly=致死
-idealland.potion.zen_heart=功德无量
+#Suits
+adven_one.suit_test=Test Suit
+adven_one.suit_test.1=Test Suit T1
+adven_one.suit_test.2=Test Suit T2
+adven_one.suit_test.3=Test Suit T3
+
+adven_one.suit_back=Backup Suit
+adven_one.suit_back.1=Backup T1
+adven_one.suit_back.2=Backup T2
+adven_one.suit_back.3=Backup T3
 
 
-entity.moroon_tainter.name=摩隆 拓荒者
+#Shared
+idealland.shared.press_shift=Hold SHIFT to examine info.
+adven_one.shared.quality_random=[Random Quality]
+adven_one.shared.quality_desc_bad=Quality: §c%s%%
+adven_one.shared.quality_desc_good=Quality: §a%s%%
 
-tile.idealland_light_basic.name=理境灯
+adven_one.gem=%s Unit
+adven_one.ore=%s Ore
+adven_one.pickaxe=%s Pickaxe
+adven_one.sword=%s Sword
+adven_one.armor0=%s Helm
+adven_one.armor1=%s T-shirt
+adven_one.armor2=%s Pants
+adven_one.armor3=%s Shoes
 
-tile.test.name=理境测试块
+adven_one.log=%s Log
+adven_one.planks=%s Planks
+adven_one.dirt=%s Dirt
+adven_one.stone=%s Rock
+adven_one.wood_stairs=%s Wood Stairs
 
-idealland.food.shared.xp_desc=含有经验: %d
-# Items
-idealland.gua_enhance_no_free.desc=可用铁砧镶嵌卦象
-idealland.gua_enhance_free.desc=徒手卦象镶嵌槽: %d
+#
+attribute.name.adven_one.attr.def_tier=Defense Tier
+attribute.name.adven_one.attr.atk_tier=Attack Tier
 
-# Items
-idealland.gua_enhance_total.desc=卦象强化: %d
-idealland.shared.press_shift=长按SHIFT查看详情
-
-fading.duration.desc=%d 秒后消失。
-
-item.debug_test.name=调试物品
-item.debug_test.desc=  在主手时减少受到的伤害 %d ;\n  造成 %d 电击伤害;\n  付与虚弱 Lv.%d (%d s);\n  击退 Lv.%d;\n  付与自身击退抗性 Lv.%d (%d s);\n  付与 %d 火焰伤害并点燃目标(%d s);\n  治疗双方 %d 点生命.
-
-item.xie_geta.name=谢公屐
-item.xie_geta.desc.0=上山模式，赋予%s级跳跃提升\n 右键地面切换模式
-item.xie_geta.desc.1=平地模式，赋予%s级速度\n 右键地面切换模式
-item.xie_geta.desc.2=下山模式，赋予I级缓慢并减少受到的摔落伤害 %s 点。\n 右键地面切换模式
-
-item.p2w_goblet.name=销金杯[装填模式]
-item.p2w_goblet.desc=氪金让你变强，强到骨子里。（塞金子升级，塞八卦、镐、食物可以改变模式）
-item.p2w_goblet.contain.desc=融解 %d 金
-item.p2w_goblet.player.desc=黄金之力：等级%d （%d/%d 金）
-
-idealland.skill.shared.cool_down_desc=冷却: %.1f秒
-idealland.skill.shared.power_desc=伤害: %.1f
-idealland.skill.shared.range_desc=半径: %.1f 格
-idealland.skill.shared.duration_desc=持续: %.1f秒
-idealland.skill.shared.error_desc=误差: +-%d
-idealland.skill.shared.level_desc=等级: %d/%d
-idealland.skill.shared.name_format=%s
-idealland.skill.shared.name_format_with_lv=%s (%s级) %s
-idealland.skill.shared.lv_max=[满]
-
-idealland.gua_enhance_list.desc=地%s 雷%s 水%s 山%s \n 泽%s 火%s 风%s 天%s
-idealland.gua_not_applicable.desc=-
-
-idealland.kill_count.desc=杀敌数: %d
-
-idealland.skill.msg.cool_down=冷却中
+#Vocal
+adven_one.vocal.boss.steve.birth=[Steve] You and your mods amuse me.
+adven_one.vocal.boss.steve.death=[Steve] If there is hope, there is rebirth...
+adven_one.vocal.boss.steve.deflect=[Steve] Vanilla mechanics, son.
+adven_one.vocal.boss.steve.kill=[Steve] Report to the Vanilla Soul - Mod players are defeated!
+adven_one.vocal.boss.steve.summon=[Steve] Go mobs, kill that player is more effective than protecting me!
