--- a/src/main/resources/assets/adven_one/lang/en_us.lang
+++ b/src/main/resources/assets/adven_one/lang/en_us.lang
@@ -47,6 +47,8 @@ adven_one.log=%s Log
 adven_one.planks=%s Planks
 adven_one.dirt=%s Dirt
 adven_one.stone=%s Rock
+adven_one.stone_stairs=%s Rock Stairs
+adven_one.stone_wall=%s Rock Wall
 adven_one.wood_stairs=%s Wood Stairs
 adven_one.wood_fence=%s Wood Fence
 
