--- a/src/main/resources/assets/adven_one/lang/zh_cn.lang
+++ b/src/main/resources/assets/adven_one/lang/zh_cn.lang
@@ -55,14 +55,15 @@ adven_one.wood_fence=%s木围墙
 #
 attribute.name.adven_one.attr.def_tier=防御阶级
 attribute.name.adven_one.attr.atk_tier=攻击阶级
-attribute.name.adven_one.attr.effeciency=挖掘效率
+attribute.name.adven_one.attr.efficiency=挖掘效率
 
-adven_one.desc.modifier=§9%s %d级
+adven_one.desc.modifier=§b%s %d级
 
-adven_one.modifiers.blank.name=§o（无）
-adven_one.modifiers.atk_up.name=攻击+
-adven_one.modifiers.hp_up.name=生命+
+adven_one.modifiers.blank.name=§o§7（无）
+adven_one.modifiers.atk_up.name=攻击
+adven_one.modifiers.hp_up.name=生命
 adven_one.modifiers.hardness.name=坚固
+adven_one.modifiers.efficiency_up.name=效率
 
 #Vocal
 adven_one.vocal.boss.steve.birth=[Steve] 你和你的模组令我感到可笑。
