--- a/src/main/resources/assets/adven_one/lang/zh_cn.lang
+++ b/src/main/resources/assets/adven_one/lang/zh_cn.lang
@@ -6,15 +6,25 @@ itemGroup.advenMiscTab=冒险一号
 configgui.idealland.category.Menu0.GeneralConf=通用配置
 idealland.conf.general.welcome=Welcome Message Key
 
+#Messages
+adven_one.msg.cost_info=§a魔力管线使用状况: %s/%s
+adven_one.msg.cost_info_overload=§c魔力管线过载: %s/%s
+
 #Entities
 entity.moroon_tainter.name=Moroon Pathfinder
 
 #Blocks
-tile.idealland_light_basic.name=Idealland Lamp
+tile.barrier_earth.name=地之屏障
 
 #Items
-item.p2w_goblet.name=P.2.W. Chalice
-item.p2w_goblet.desc=Pay gold to increa
+item.food_cost_small.name=魔力小果
+item.food_cost_small.desc=吃下后，自身会长出魔力管线
+
+item.food_cost_norm.name=魔力果
+item.food_cost_norm.desc=吃下后，自身会长出魔力管线
+
+item.food_cost_big.name=魔力大果
+item.food_cost_big.desc=吃下后，自身会长出魔力管线
 
 #Suits
 adven_one.suit_test=测试套
@@ -27,8 +37,13 @@ adven_one.suit_back.1=备用一阶
 adven_one.suit_back.2=备用二阶
 adven_one.suit_back.3=备用三阶
 
+adven_one.suit_luck_a.1=寻宝者1
+adven_one.suit_luck_a.2=猎宝人2
+
+adven_one.suit_celestial.4=星魂
+
 #Shared
-idealland.shared.press_shift=Hold SHIFT to examine info.
+idealland.shared.press_shift=长按 SHIFT 查看详情
 adven_one.shared.quality_random=[随机成色]
 adven_one.shared.quality_desc_bad=成色: §c%s%%
 adven_one.shared.quality_desc_good=成色: §a%s%%
@@ -50,11 +65,14 @@ adven_one.stone_stairs=%s石楼梯
 adven_one.stone_wall=%s石围墙
 adven_one.wood_stairs=%s木楼梯
 adven_one.wood_fence=%s木围墙
+adven_one.block=%s块
 
 #
 attribute.name.adven_one.attr.def_tier=防御阶级
 attribute.name.adven_one.attr.atk_tier=攻击阶级
 attribute.name.adven_one.attr.efficiency=挖掘效率
+attribute.name.adven_one.attr.cost=魔力管线
+attribute.name.adven_one.attr.cost_max=魔力管线
 
 adven_one.desc.modifier=§b%s %d级
 
@@ -69,15 +87,8 @@ adven_one.vocal.boss.steve.birth=[Steve] 你和你的模组令我感到可笑。
 adven_one.vocal.boss.steve.death=[Steve] 如果能重生，就有希望……
 adven_one.vocal.boss.steve.deflect=[Steve] 香草机制，小子。
 adven_one.vocal.boss.steve.kill=[Steve] 向香草之魂报告：模组玩家，已被击败！
+adven_one.vocal.boss.steve.summon=[Steve] 去吧,杀掉那个玩家比试图保护我更有效。
 
-tile.barrier_sky.name=Sky Barrier
-tile.barrier_earth.name=Earth Barrier
-item.cost_measure.name=P.2.W. Chalice
-item.cost_measure_max.desc=Pay gold to increa
-adven_one.suit_luck_a.1=Treasure Hunter A1
-adven_one.suit_luck_a.2=Treasure Hunter A2
-adven_one.suit_luck_a.3=Treasure Hunter A3
-adven_one.suit_celestial.4=Celestial
-adven_one.block=%s Block
-attribute.name.adven_one.attr.cost=Cost
-attribute.name.adven_one.attr.cost_max=Costadven_one.vocal.boss.steve.summon=[Steve] 去吧,杀掉那个玩家比试图保护我更有效。
+tile.barrier_sky.name=天空屏障
+item.cost_measure.name=回路计
+item.cost_measure_max.desc=显示自身魔力管线的使用状况。
