--- a/src/main/resources/assets/adven_one/lang/zh_cn.lang
+++ b/src/main/resources/assets/adven_one/lang/zh_cn.lang
@@ -39,6 +39,7 @@ adven_one.suit_back.3=备用三阶
 
 adven_one.suit_luck_a.1=寻宝者1
 adven_one.suit_luck_a.2=猎宝人2
+adven_one.suit_luck_a.3=Treasure Hunter A3
 
 adven_one.suit_celestial.4=星魂
 
