--- a/src/main/resources/assets/adven_one/lang/en_us.lang
+++ b/src/main/resources/assets/adven_one/lang/en_us.lang
@@ -86,6 +86,23 @@ adven_one.modifiers.atk_up.name=ATK
 adven_one.modifiers.hp_up.name=HP
 adven_one.modifiers.hardness.name=Hardness
 adven_one.modifiers.efficiency_up.name=Efficient
+adven_one.modifiers.weapon_up.name=Efficient
+adven_one.modifiers.kill_creeper.name=Creeper Killer
+adven_one.modifiers.kill_enderman.name=Enderman Killer
+adven_one.modifiers.kill_player.name=Player Killer
+adven_one.modifiers.kill_melee.name=Melee Killer
+adven_one.modifiers.kill_bow.name=Bowman Killer
+adven_one.modifiers.kill_pig.name=Pig Butcher
+adven_one.modifiers.kill_cow.name=Cow Butcher
+adven_one.modifiers.kill_sheep.name=Sheep Butcher
+adven_one.modifiers.kill_chick.name=Chick Butcher
+adven_one.modifiers.cost_save.name=Cost Saver
+adven_one.modifiers.cost_save_sword.name=Cost Saver [Sword]
+adven_one.modifiers.cost_save_pick.name=Cost Saver [Pickaxe]
+adven_one.modifiers.cost_save_armor.name=Cost Saver [Armor]
+adven_one.modifiers.overload_sword.name=Efficient [Sword]
+adven_one.modifiers.overload_pick.name=Efficient [Pickaxe]
+adven_one.modifiers.overload_armor.name=Efficient [Armor]
 
 #Vocal
 adven_one.vocal.boss.steve.birth=[Steve] You and your mods amuse me.
