--- a/src/main/resources/assets/adven_one/lang/en_us.lang
+++ b/src/main/resources/assets/adven_one/lang/en_us.lang
@@ -86,7 +86,7 @@ adven_one.modifiers.atk_up.name=ATK
 adven_one.modifiers.hp_up.name=HP
 adven_one.modifiers.hardness.name=Hardness
 adven_one.modifiers.efficiency_up.name=Efficient
-adven_one.modifiers.weapon_up.name=Efficient
+adven_one.modifiers.weapon_up.name=ATK [SWORD]
 adven_one.modifiers.kill_creeper.name=Creeper Killer
 adven_one.modifiers.kill_enderman.name=Enderman Killer
 adven_one.modifiers.kill_player.name=Player Killer
