--- a/src/main/resources/assets/adven_one/lang/en_us.lang
+++ b/src/main/resources/assets/adven_one/lang/en_us.lang
@@ -65,6 +65,7 @@ adven_one.armor3=%s Shoes
 adven_one.log=%s Log
 adven_one.planks=%s Planks
 adven_one.dirt=%s Dirt
+adven_one.grass=%s Grass
 adven_one.stone=%s Rock
 adven_one.stone_stairs=%s Rock Stairs
 adven_one.stone_wall=%s Rock Wall
