--- a/src/main/resources/assets/adven_one/lang/en_us.lang
+++ b/src/main/resources/assets/adven_one/lang/en_us.lang
@@ -16,22 +16,29 @@ entity.moroon_tainter.name=Moroon Pathfinder
 #Blocks
 tile.barrier_sky.name=Sky Barrier
 tile.barrier_earth.name=Earth Barrier
+tile.cost_ore.name=Cost Ore
 
 #Items
 item.cost_measure.name=Cost Meter
-item.cost_measure_max.desc=Displays Current cost info.
+item.cost_measure.desc=Displays Current cost info
+
+item.quality_dust.name=Quality_Dust
+item.quality_dust.desc=Improve the quality of items in the anvil
+
+item.mod_shifter.name=Mod shifter
+item.mod_shifter.desc=Can absorb or give entries
 
 item.tp_food.name=TP Food
-item.tp_food.desc=Adventure One starts.
+item.tp_food.desc=Adventure One starts
 
 item.food_cost_small.name=Lesser Cost Booster
-item.food_cost_small.desc=Boosts your cost.
+item.food_cost_small.desc=Boosts your cost
 
 item.food_cost_norm.name=Cost Booster
-item.food_cost_norm.desc=Boosts your cost.
+item.food_cost_norm.desc=Boosts your cost
 
 item.food_cost_big.name=Great Cost Booster
-item.food_cost_big.desc=Boosts your cost.
+item.food_cost_big.desc=Boosts your cost
 
 #Suits
 adven_one.suit_test=Test Suit
